# bdo_daily_bot

./: .env  .gitignore  .gitignore.swp  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README.md  bot_start.py  instruments.py  main.py  main.spec  messages.py  pylintrc  raid.py  requirements.txt  setup.py  to.spec  Ошибки_предложения.txt
bot/: .pylintrc  __init__.py  bot.py  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
bot/bdo_daily_bot/: bot.py
bot/bdo_daily_bot/commands/: admin.py  base.py  events.py  fun.py  registration.py  statistics.py
bot/bdo_daily_bot/config/: api.py  config.py  variables.py
bot/bdo_daily_bot/errors/: errors.py
bot/bdo_daily_bot/messages/: __init__.py
bot/bdo_daily_bot/settings/: settings.py
bot/cogs/: base.py  fun.py  raid_manager.py
bot/commands/: admin.py  base.py  events.py  fun.py  raid_manager.py  registration.py  statistics.py
bot/commands/raid/: creation.py  manager.py  overview.py
bot/commands/raid_manager/: common.py  creation.py  joining.py  manager.py  overview.py  raid_list.py  registration.py  save_load.py
bot/core/command_gates/: common.py  gate.py  raid_gate.py  raid_picker.py
bot/core/commands/: admin.py  common.py  registration_controller.py  roles.py
bot/core/commands_reporter/: command_failure_reasons.py  reporter.py
bot/core/database/: captain_collection.py  database.py  manager.py  raid_archive_collection.py  raid_collection.py  settings_collection.py  user_collection.py
bot/core/guild_managers/: managers_controller.py  raids_keeper.py  raids_manager.py
bot/core/guild_managment/: punishments.py
bot/core/guild_security/: guild_security_manager.py
bot/core/logger/: log_template.py  logger.py
bot/core/models/: context.py  context_factory.py  reaction_strategy.py
bot/core/parser/: common_parser.py  raid_input_parser.py
bot/core/raid/: raid.py  raid_channel.py  raid_coll_msg.py  raid_flow.py  raid_item.py  raid_item_factory.py  raid_list.py  raid_member.py  raid_messages.py  raid_notifier.py  raid_table.py  raid_time.py  raids_information_channel.py
bot/core/tools/: check_input.py  common.py  path_factory.py  tools.py
bot/core/users_interactor/: common.py  message_reaction_interactor.py  senders.py  users_choices.py
bot/instruments/: check_input.py  database_process.py  help_messages.py  messages.py  raid.py  tools.py
bot/instruments/database/: captain_col.py  captain_collection.py  database.py  db_init.py  db_manager.py  manager.py  (+4 more)
bot/messages/: __init__.py
bot/settings/: correct_channels.json  logger.py  not_dell_msgs.json  secrets.py  settings.py
bot/tests/: conftest.py
tests/test_framework/: hooks.py  pyproject.toml
(+351 files in other folders)
