[project]
name = "test_framework"
version = "4.0.0"
description = "Test Framework for testing bdo_daily_bot"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "aiohttp",
    "async_lru",
    "deepdiff",
    "faker",
    "prettytable",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pyyaml",
    "tabulate",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pip-tools",
    "pre-commit",
    "pylint"
]

[tool.setuptools.packages.find]
include = ["test_framework*"]

[project.urls]
repository = "https://github.com/Gliger13/bdo_daily_bot/tests/test_framework"
